# poe-sidekick

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  tox.ini  vulture_whitelist.py
data/templates/: metadata.json
docs/: index.md  modules.md
memory_bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
poe_sidekick/: __main__.py
poe_sidekick/config/: core.json  loot_module.json  workflows.json
poe_sidekick/core/: engine.py  example_module.py  module.py  stream.py  types.py  window.py  workflow.py
poe_sidekick/plugins/loot_manager/: __init__.py  module.py
poe_sidekick/services/: config.py  input.py  item.py  template.py  vision.py
poe_sidekick/workflows/: __init__.py  loot.py
scripts/: run.bat  run_pre_commit.bat  run_tests.bat  run_type_check.bat  run_workflow.bat  test_screenshots.py  vet.bat
tests/: test_config.py  test_engine.py  test_foo.py  test_input.py  test_loot_module.py  test_module.py  test_stream.py  test_template.py  test_vision.py  test_window.py  test_workflow.py
