[tool.poetry]
name = "poe_sidekick"
version = "0.0.1"
description = "This is a POE2 assistant app."
authors = ["Evgeni P <evgeni.petrov@gmail.com>"]
repository = "https://github.com/evgenipetrov/poe-sidekick"
documentation = "https://evgenipetrov.github.io/poe-sidekick/"
readme = "README.md"
packages = [
  {include = "poe_sidekick"}
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pywin32 = "*"
numpy = "*"
opencv-python = "*"
rx = "*"
dxcam = "*"
psutil = "*"
pyautogui = "^0.9.54"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
deptry = "*"
mypy = "*"
pre-commit = "*"
tox = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = {extras = ["python"], version = "*"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["poe_sidekick"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"



[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:datetime.datetime.utcfromtimestamp:DeprecationWarning",
    "ignore:datetime.datetime.utcnow:DeprecationWarning"
]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]
per-file-ignores = {"tests/*" = ["S101"]}

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["poe_sidekick"]
